# boiler

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc.cjs  LICENSE  README.md  boiler.code-workspace  jsconfig.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.workspace.json
api/: package.json
api/e2e/: root.test.js
api/src/: app.js  index.js  index.ts
api/src/plugins/: index.js  sensible-plugin.js
api/src/routes/: add-root-route.js  index.js
api/src/util/: hello.ts
api/src/utils/: say-hello.js  say-hello.spec.js  say-hello.test.js  sayHello.js
app/: jsconfig.json  package.json  tsconfig.json
app/src/: index.js  index.ts  print.js  print.spec.js
backend/: main.py  package.json  pyproject.toml  tsconfig.json
backend/src/: app.ts  config.test.ts  config.ts  index.ts  ioc.ts
backend/src/plugins/: container.ts  index.ts  sensible.ts
backend/src/routes/: root.ts
backend/src/utils/: get-name.spec.ts  get-name.ts
common/: .eslintrc.cjs  bundle.ts  package.json  tsconfig.build.json
common/src/: index.ts  passing-test.test.ts
frontend/: .eslintrc.cjs  bundle.ts  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
frontend/src/: App.spec.tsx  App.tsx  main.tsx
infra/: README.md  cdk.json  package.json  pyproject.toml  tsconfig.json
