[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A boilerplate python backend"
authors = ["Ali Aminfar <ali.aminfar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
