[tool.poetry]
name = "infra"
version = "0.1.0"
description = ""
authors = ["Ali Aminfar <ali.aminfar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
constructs = "^10.3.0"
aws-cdk-lib = "2.126.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
